# xfway

./: .buildconfig  .gitignore  Makefile.am  configure.ac.in  main.c  meson.build  server.h  shell.c  shell.h  unsaved file 1  xfway-protocols-uninstalled.pc  xfway-protocols-uninstalled.pc.in  xfway-protocols.pc  xfway-protocols.pc.in
protocol/: Makefile.am  xfway-shell.xml
protocols/: Makefile.am  xfway.xml
src/: Makefile.am  client.c  client.h  display.h  main-shell-client.c  main-wayland.c  screen.c  screen.h  server.h  settings.h  shell.c  shell.h  stacking.c  stacking.h  tabwin.c  tabwin.h  window-switcher.c  wlr_foreign_toplevel_management_v1.c  wlr_layer_shell_v1.c  wlr_layer_shell_v1.h  xfway.h
tests/test-switcher/: Makefile.am  switcher-test.c
